--- a/src/main/resources/templates/travelicon/index.html
+++ b/src/main/resources/templates/travelicon/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head">
-  <link rel "stylesheet" href="styles.css)</head>
+  <link rel "stylesheet" href="styles.css"></head>
 <body>
 <h1 th:text="${title}">Default Title</h1>
 
